--- a/versions/fabric/1.20.2/mods/yacl.pw.toml
+++ b/versions/fabric/1.20.2/mods/yacl.pw.toml
@@ -1,6 +1,6 @@
 name = "YetAnotherConfigLib"
 filename = "yet-another-config-lib-fabric-3.3.0-beta.1+1.20.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/vede4iWJ/yet-another-config-lib-fabric-3.3.0-beta.1%2B1.20.2.jar"
