--- a/versions/fabric/1.20.4/mods/fabric-api.pw.toml
+++ b/versions/fabric/1.20.4/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.91.3+1.20.4.jar"
+filename = "fabric-api-0.92.1+1.20.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/JQ07mKWY/fabric-api-0.91.3%2B1.20.4.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/cAJWRbQt/fabric-api-0.92.1%2B1.20.4.jar"
 hash-format = "sha1"
-hash = "97e7a40a02f291a618ab7a63d5bd08dbcb50995e"
+hash = "cffd50fa41969c78215266ed1459b1b86eac401a"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "JQ07mKWY"
+version = "cAJWRbQt"
