--- a/versions/fabric/1.20.2/mods/badoptimizations.pw.toml
+++ b/versions/fabric/1.20.2/mods/badoptimizations.pw.toml
@@ -1,13 +1,13 @@
 name = "BadOptimizations"
-filename = "BadOptimizations-1.6.1.jar"
+filename = "BadOptimizations-1.6.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/PY8WFC19/BadOptimizations-1.6.1.jar"
+url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/pNkHByNm/BadOptimizations-1.6.2.jar"
 hash-format = "sha1"
-hash = "0468a66daaa604ee9d160b21670e40af80029179"
+hash = "9f777080edd0bc87596148362f5a3f317747e2d4"
 
 [update]
 [update.modrinth]
 mod-id = "g96Z4WVZ"
-version = "PY8WFC19"
+version = "pNkHByNm"
