--- a/versions/fabric/1.16.5/mods/modernfix.pw.toml
+++ b/versions/fabric/1.16.5/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.11.1+mc1.16.5.jar"
+filename = "modernfix-fabric-5.12.0+mc1.16.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/gJzUanvd/modernfix-fabric-5.11.1%2Bmc1.16.5.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/s3eeVFK8/modernfix-fabric-5.12.0%2Bmc1.16.5.jar"
 hash-format = "sha1"
-hash = "4d4ed710249ddf908a060d4b74974fdd8eabcb1e"
+hash = "d5f31a71a372e329d38a23ce414f6009e035cde9"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "gJzUanvd"
+version = "s3eeVFK8"
