--- a/versions/fabric/1.19.2/mods/badoptimizations.pw.toml
+++ b/versions/fabric/1.19.2/mods/badoptimizations.pw.toml
@@ -1,13 +1,13 @@
 name = "BadOptimizations"
-filename = "BadOptimizations-1.6.1.jar"
+filename = "BadOptimizations-1.6.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/o0gYJCDi/BadOptimizations-1.6.1.jar"
+url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/YPx40hkR/BadOptimizations-1.6.2.jar"
 hash-format = "sha1"
-hash = "9473f59bf20fae47d312d4911562a027efb2d1b8"
+hash = "4bc90b5252038697b2afe316baa00370175c0fb8"
 
 [update]
 [update.modrinth]
 mod-id = "g96Z4WVZ"
-version = "o0gYJCDi"
+version = "YPx40hkR"
