--- a/versions/fabric/1.19.4/mods/badoptimizations.pw.toml
+++ b/versions/fabric/1.19.4/mods/badoptimizations.pw.toml
@@ -1,13 +1,13 @@
 name = "BadOptimizations"
-filename = "BadOptimizations-1.6.1.jar"
+filename = "BadOptimizations-1.6.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/Tyi2q14M/BadOptimizations-1.6.1.jar"
+url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/l5RWBdez/BadOptimizations-1.6.2.jar"
 hash-format = "sha1"
-hash = "dfa314b8f14bf8e746a814c33b6bd6a59036531b"
+hash = "d4b39b4179adc5a799eff910d506c69b52b41d5a"
 
 [update]
 [update.modrinth]
 mod-id = "g96Z4WVZ"
-version = "Tyi2q14M"
+version = "l5RWBdez"
