--- a/versions/fabric/1.20.2/mods/moreculling.pw.toml
+++ b/versions/fabric/1.20.2/mods/moreculling.pw.toml
@@ -1,13 +1,14 @@
 name = "More Culling"
-filename = "moreculling-1.20.4-0.21.0.jar"
+filename = "moreculling-1.20.4-0.20.3.jar"
 side = "client"
+pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/51shyZVL/versions/jv96n9er/moreculling-1.20.4-0.21.0.jar"
+url = "https://cdn.modrinth.com/data/51shyZVL/versions/qLO5kLrO/moreculling-1.20.4-0.20.3.jar"
 hash-format = "sha1"
-hash = "8d0dbf74e8500fd4279b5b0be11ee898208ce07a"
+hash = "d58cc68e3867fc64bfcfe35baf5ba572f018f6d9"
 
 [update]
 [update.modrinth]
 mod-id = "51shyZVL"
-version = "jv96n9er"
+version = "qLO5kLrO"
