--- a/versions/fabric/1.20.4/config/yosbr/config/moreculling.toml
+++ b/versions/fabric/1.20.4/config/yosbr/config/moreculling.toml
@@ -1,6 +1,7 @@
 itemFrameLODRange = 128
 itemFrame3FaceCullingRange = 0.0
 includeMangroveRoots = true
+endGatewayCulling = true
 
 [modCompatibility]
 minecraft = true
