--- a/versions/quilt/1.18.2/mods/dynamic-fps.pw.toml
+++ b/versions/quilt/1.18.2/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.3.1+minecraft-1.16.5.jar"
+filename = "dynamic-fps-3.3.3+minecraft-1.16.5.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/5NDr40VW/dynamic-fps-3.3.1%2Bminecraft-1.16.5.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/lffwyl3t/dynamic-fps-3.3.3%2Bminecraft-1.16.5.jar"
 hash-format = "sha1"
-hash = "f32e573837d7dca9713d5734c39f97c40184151c"
+hash = "5c322d29937fa4be9a4fedb4439909caa87158e7"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "5NDr40VW"
+version = "lffwyl3t"
