--- a/versions/quilt/1.19.2/mods/dynamic-fps.pw.toml
+++ b/versions/quilt/1.19.2/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.3.1+minecraft-1.19.0.jar"
+filename = "dynamic-fps-3.3.3+minecraft-1.19.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/qU25ZOM2/dynamic-fps-3.3.1%2Bminecraft-1.19.0.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/EqKUlwIM/dynamic-fps-3.3.3%2Bminecraft-1.19.0.jar"
 hash-format = "sha1"
-hash = "86de8a3266fe3979715cc2857d62b99d742d434f"
+hash = "c1a7fff75b43c37159314a4448968e00d3340fbf"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "qU25ZOM2"
+version = "EqKUlwIM"
