--- a/versions/fabric/1.19.4/mods/world-host.pw.toml
+++ b/versions/fabric/1.19.4/mods/world-host.pw.toml
@@ -1,13 +1,13 @@
 name = "World Host"
-filename = "world-host-0.4.8+1.19.4-fabric.jar"
+filename = "world-host-0.4.9+1.19.4-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/gXuD95df/world-host-0.4.8%2B1.19.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/sAd1kzXW/world-host-0.4.9%2B1.19.4-fabric.jar"
 hash-format = "sha1"
-hash = "e929c0cc2d5272fe0288810b330e59dde3346af1"
+hash = "44f77fe7bde7089bd70fd97fb19bbcaa95d33e3a"
 
 [update]
 [update.modrinth]
 mod-id = "2AIZDfYo"
-version = "gXuD95df"
+version = "sAd1kzXW"
