--- a/versions/fabric/1.20.1/mods/noisium.pw.toml
+++ b/versions/fabric/1.20.1/mods/noisium.pw.toml
@@ -1,6 +1,6 @@
 name = "Noisium"
 filename = "noisium-1.0.2+mc1.20.x.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/KuNKN7d2/versions/7p5BqRHp/noisium-1.0.2%2Bmc1.20.x.jar"
