--- a/versions/fabric/1.20.2/mods/world-host.pw.toml
+++ b/versions/fabric/1.20.2/mods/world-host.pw.toml
@@ -1,13 +1,13 @@
 name = "World Host"
-filename = "world-host-0.4.8+1.20.2-fabric.jar"
+filename = "world-host-0.4.9+1.20.2-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/lB3iafW4/world-host-0.4.8%2B1.20.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/YgLhoSeH/world-host-0.4.9%2B1.20.2-fabric.jar"
 hash-format = "sha1"
-hash = "21b8b3dee509c342131802238140267a4a8566fa"
+hash = "14dde42342f3342979a7437633a6f713808737a0"
 
 [update]
 [update.modrinth]
 mod-id = "2AIZDfYo"
-version = "lB3iafW4"
+version = "YgLhoSeH"
