--- a/versions/quilt/1.20.1/mods/modernfix.pw.toml
+++ b/versions/quilt/1.20.1/mods/modernfix.pw.toml
@@ -1,6 +1,7 @@
 name = "ModernFix"
 filename = "modernfix-fabric-5.10.0+mc1.20.1.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/nmDcB62a/versions/9GyqQvmB/modernfix-fabric-5.10.0%2Bmc1.20.1.jar"
