--- a/versions/fabric/1.20.4/mods/reeses-sodium-options.pw.toml
+++ b/versions/fabric/1.20.4/mods/reeses-sodium-options.pw.toml
@@ -1,13 +1,13 @@
 name = "Reese's Sodium Options"
-filename = "reeses_sodium_options-1.7.0+mc1.20.2-build.97.jar"
+filename = "reeses_sodium_options-1.7.1+mc1.20.4-build.100.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/YxKBGhki/reeses_sodium_options-1.7.0%2Bmc1.20.2-build.97.jar"
+url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/Iukh1sNN/reeses_sodium_options-1.7.1%2Bmc1.20.4-build.100.jar"
 hash-format = "sha1"
-hash = "5ab271d5c698f96618f717a231218810afc927b0"
+hash = "180b2e0ca8d3837348b7252856265b57a5fa5424"
 
 [update]
 [update.modrinth]
 mod-id = "Bh37bMuy"
-version = "YxKBGhki"
+version = "Iukh1sNN"
