--- a/versions/fabric/1.20.4/mods/sodium.pw.toml
+++ b/versions/fabric/1.20.4/mods/sodium.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium"
-filename = "sodium-fabric-0.5.7+mc1.20.3.jar"
+filename = "sodium-fabric-mc1.20.3-0.5.5.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/AANobbMI/versions/Wzzjm5lQ/sodium-fabric-0.5.7%2Bmc1.20.3.jar"
+url = "https://cdn.modrinth.com/data/AANobbMI/versions/InGKdfel/sodium-fabric-mc1.20.3-0.5.5.jar"
 hash-format = "sha1"
-hash = "29bb348941f10d9711764893ec1da0a46feaa2b7"
+hash = "999eb53c5761850e99d234812dd0f710640b79a5"
 
 [update]
 [update.modrinth]
 mod-id = "AANobbMI"
-version = "Wzzjm5lQ"
+version = "InGKdfel"
