--- a/versions/fabric/1.20.1/mods/iris.pw.toml
+++ b/versions/fabric/1.20.1/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.20.1-1.6.15.jar"
+filename = "iris-mc1.20.1-1.6.17.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/tkEqg8gS/iris-mc1.20.1-1.6.15.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/JHbrO6Zq/iris-mc1.20.1-1.6.17.jar"
 hash-format = "sha1"
-hash = "c4fcf9d92247c80149cee5ee2e3eff9819774042"
+hash = "daaa0a952273301117d3dc42bde68c6f1f60b318"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "tkEqg8gS"
+version = "JHbrO6Zq"
