--- a/versions/fabric/1.20.1/mods/polytone.pw.toml
+++ b/versions/fabric/1.20.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20-1.14.5-fabric.jar"
+filename = "polytone-1.20-1.14.6-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/dOhZzscT/polytone-1.20-1.14.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/S2IWllKK/polytone-1.20-1.14.6-fabric.jar"
 hash-format = "sha1"
-hash = "41e29002bf063a32749e5820231ba2a1455ed961"
+hash = "6f1e639056a42a9476edc20a7064acf8bba73043"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "dOhZzscT"
+version = "S2IWllKK"
