--- a/versions/fabric/1.20.1/mods/sodium.pw.toml
+++ b/versions/fabric/1.20.1/mods/sodium.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium"
-filename = "sodium-fabric-0.5.7+mc1.20.1.jar"
+filename = "sodium-fabric-0.5.8+mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/AANobbMI/versions/umKbm1Rp/sodium-fabric-0.5.7%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/AANobbMI/versions/mhZtY2lR/sodium-fabric-0.5.8%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "10a4f96dd76c6075ad65b9c02bb13b5c3677f47f"
+hash = "bdd6b8ac84b46ae56a3bbb761ce430c48e42e00d"
 
 [update]
 [update.modrinth]
 mod-id = "AANobbMI"
-version = "umKbm1Rp"
+version = "mhZtY2lR"
