--- a/versions/fabric/1.20.4/mods/reeses-sodium-options.pw.toml
+++ b/versions/fabric/1.20.4/mods/reeses-sodium-options.pw.toml
@@ -1,13 +1,13 @@
 name = "Reese's Sodium Options"
-filename = "reeses_sodium_options-1.7.1+mc1.20.4-build.100.jar"
+filename = "reeses_sodium_options-1.7.2+mc1.20.4-build.102.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/Iukh1sNN/reeses_sodium_options-1.7.1%2Bmc1.20.4-build.100.jar"
+url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/fkLiGoHs/reeses_sodium_options-1.7.2%2Bmc1.20.4-build.102.jar"
 hash-format = "sha1"
-hash = "180b2e0ca8d3837348b7252856265b57a5fa5424"
+hash = "5e2f4ad814f34e2f55fda4efa30c878c5e573978"
 
 [update]
 [update.modrinth]
 mod-id = "Bh37bMuy"
-version = "Iukh1sNN"
+version = "fkLiGoHs"
