--- a/versions/fabric/1.16.5/mods/dynamic-fps.pw.toml
+++ b/versions/fabric/1.16.5/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.3.3+minecraft-1.16.5.jar"
+filename = "dynamic-fps-3.4.2+minecraft-1.16.5-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/lffwyl3t/dynamic-fps-3.3.3%2Bminecraft-1.16.5.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/r8rpH64x/dynamic-fps-3.4.2%2Bminecraft-1.16.5-fabric.jar"
 hash-format = "sha1"
-hash = "5c322d29937fa4be9a4fedb4439909caa87158e7"
+hash = "315c512c463b5353b598844be44ba39aecc09a6e"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "lffwyl3t"
+version = "r8rpH64x"
