--- a/versions/fabric/1.18.2/mods/modernfix.pw.toml
+++ b/versions/fabric/1.18.2/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.13.0+mc1.18.2.jar"
+filename = "modernfix-fabric-5.14.0+mc1.18.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/Id3z4wMh/modernfix-fabric-5.13.0%2Bmc1.18.2.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/J3SmQdYi/modernfix-fabric-5.14.0%2Bmc1.18.2.jar"
 hash-format = "sha1"
-hash = "a1626daa36842354ed10442b51c37cd3e39148e6"
+hash = "4f30f101fc3f0f691ed3f467d2af1cd4b4d3de94"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "Id3z4wMh"
+version = "J3SmQdYi"
