--- a/versions/fabric/1.16.5/mods/modernfix.pw.toml
+++ b/versions/fabric/1.16.5/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.13.0+mc1.16.5.jar"
+filename = "modernfix-fabric-5.14.0+mc1.16.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/JeFLzIkV/modernfix-fabric-5.13.0%2Bmc1.16.5.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/oRGm8e3F/modernfix-fabric-5.14.0%2Bmc1.16.5.jar"
 hash-format = "sha1"
-hash = "72f5724e5d223b2ff6d918e66800ba7674ed0c40"
+hash = "9985022f61916a7ca6b004996e984d401e0fda43"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "JeFLzIkV"
+version = "oRGm8e3F"
