--- a/versions/fabric/1.20.2/resourcepacks/chat-reporting-helper.pw.toml
+++ b/versions/fabric/1.20.2/resourcepacks/chat-reporting-helper.pw.toml
@@ -3,11 +3,11 @@ filename = "Chat Reporting Helper.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/tN4E9NfV/versions/M75CMzeC/Chat%20Reporting%20Helper.zip"
+url = "https://cdn.modrinth.com/data/tN4E9NfV/versions/pXplWXNs/Chat%20Reporting%20Helper.zip"
 hash-format = "sha1"
-hash = "cd87c4660b4c983444fd8450dc702bf748768993"
+hash = "20378e08dd99bb4de387a46cbf2e0313317d123f"
 
 [update]
 [update.modrinth]
 mod-id = "tN4E9NfV"
-version = "M75CMzeC"
+version = "pXplWXNs"
