import changes from upstream
except "format all config files"
and add entity model features for 1.18.2

--- a/versions/fabric/1.19.4/mods/entity-model-features.pw.toml
+++ b/versions/fabric/1.19.4/mods/entity-model-features.pw.toml
@@ -1,4 +1,4 @@
-name = "Entity Model Features [CEM]"
+name = "[EMF] Entity Model Features"
 filename = "entity_model_features_fabric_1.19.4-1.3.jar"
 side = "client"
 
