--- a/versions/fabric/1.19.2/mods/entity-model-features.pw.toml
+++ b/versions/fabric/1.19.2/mods/entity-model-features.pw.toml
@@ -1,4 +1,4 @@
-name = "Entity Model Features [CEM]"
+name = "[EMF] Entity Model Features"
 filename = "entity_model_features_fabric_1.19.2-1.3.jar"
 side = "client"
 
