--- a/versions/fabric/1.20.1/mods/entity-model-features.pw.toml
+++ b/versions/fabric/1.20.1/mods/entity-model-features.pw.toml
@@ -1,4 +1,4 @@
-name = "Entity Model Features [CEM]"
+name = "[EMF] Entity Model Features"
 filename = "entity_model_features_fabric_1.20.1-1.3.jar"
 side = "client"
 
