--- a/versions/fabric/1.20.4/config/yosbr/config/moreculling.toml
+++ b/versions/fabric/1.20.4/config/yosbr/config/moreculling.toml
@@ -1,7 +1,4 @@
-itemFrameLODRange = 128
+version = 1
+itemFrameLODRange = 64
 itemFrame3FaceCullingRange = 0.0
 includeMangroveRoots = true
-endGatewayCulling = true
-
-[modCompatibility]
-minecraft = true
