--- a/versions/fabric/1.19.2/mods/polytone.pw.toml
+++ b/versions/fabric/1.19.2/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.19.2-1.15.0-fabric.jar"
+filename = "polytone-1.19.2-1.15.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/EfzKG5O8/polytone-1.19.2-1.15.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/Nbqb4SRz/polytone-1.19.2-1.15.1-fabric.jar"
 hash-format = "sha1"
-hash = "8aafec37c65cedfc702f6c3aafe3212da487f087"
+hash = "f16d7dbb74624c99ce5418167db63cd21a520728"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "EfzKG5O8"
+version = "Nbqb4SRz"
