--- a/versions/fabric/1.20.1/mods/modelfix.pw.toml
+++ b/versions/fabric/1.20.1/mods/modelfix.pw.toml
@@ -3,11 +3,11 @@ filename = "modelfix-1.15-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/QdG47OkI/versions/BEeRgTMS/modelfix-1.15-fabric.jar"
+url = "https://cdn.modrinth.com/data/QdG47OkI/versions/GkLb4bRl/modelfix-1.15-fabric.jar"
 hash-format = "sha1"
-hash = "309e332721d02dc4c8ae538f61d2d94a1fa4aab4"
+hash = "75554b02e63a2440321a32dc5e55988897181bdf"
 
 [update]
 [update.modrinth]
 mod-id = "QdG47OkI"
-version = "BEeRgTMS"
+version = "GkLb4bRl"
