--- a/versions/fabric/1.20.1/resourcepacks/fullbright-ub.pw.toml
+++ b/versions/fabric/1.20.1/resourcepacks/fullbright-ub.pw.toml
@@ -1,13 +1,13 @@
 name = "Fullbright UB"
-filename = "Fullbright-UB-1.20.zip"
+filename = "Fullbright-UB-1.21-Beta.2.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/ItHr72Fy/versions/p2fuqvAG/Fullbright-UB-1.20.zip"
+url = "https://cdn.modrinth.com/data/ItHr72Fy/versions/L1hAGRJA/Fullbright-UB-1.21-Beta.2.zip"
 hash-format = "sha1"
-hash = "8cdf28238e817fa54b185393bfb258597c6b36eb"
+hash = "770e50893fd23787a96b25d50fa58c2a2d6ca752"
 
 [update]
 [update.modrinth]
 mod-id = "ItHr72Fy"
-version = "p2fuqvAG"
+version = "L1hAGRJA"
