--- a/versions/fabric/1.20.1/mods/polytone.pw.toml
+++ b/versions/fabric/1.20.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20-1.16.0-fabric.jar"
+filename = "polytone-1.20-1.16.5-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/O4mzVhUP/polytone-1.20-1.16.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/1SfNOW9A/polytone-1.20-1.16.5-fabric.jar"
 hash-format = "sha1"
-hash = "89c7b7da477c5cd6891ea06171396db0cab874a9"
+hash = "bb212486dd4ad4b70101746cec3d3586e0d5eea5"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "O4mzVhUP"
+version = "1SfNOW9A"
