--- a/versions/fabric/1.20.4/mods/polytone.pw.toml
+++ b/versions/fabric/1.20.4/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20.4-1.14.6-fabric.jar"
+filename = "polytone-1.20.4-1.16.6-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/p4Tx9dRW/polytone-1.20.4-1.14.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/e0Ly1lE4/polytone-1.20.4-1.16.6-fabric.jar"
 hash-format = "sha1"
-hash = "6a514cdd6763ef77f4895300feb1fbd2ad704309"
+hash = "773359b351fa2d45d62027f167245d9a67c3b5da"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "p4Tx9dRW"
+version = "e0Ly1lE4"
