--- a/versions/fabric/1.20.4/mods/polytone.pw.toml
+++ b/versions/fabric/1.20.4/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20.4-1.16.6-fabric.jar"
+filename = "polytone-1.20.4-1.17.6-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/e0Ly1lE4/polytone-1.20.4-1.16.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/TAZDKkIi/polytone-1.20.4-1.17.6-fabric.jar"
 hash-format = "sha1"
-hash = "773359b351fa2d45d62027f167245d9a67c3b5da"
+hash = "8bfecf613a73d1c32398f2414be21478b1c3bb07"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "e0Ly1lE4"
+version = "TAZDKkIi"
