--- a/versions/quilt/1.20.1/mods/polytone.pw.toml
+++ b/versions/quilt/1.20.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20-1.16.5-fabric.jar"
+filename = "polytone-1.20-1.17.7-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/1SfNOW9A/polytone-1.20-1.16.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/Ixn4IaUD/polytone-1.20-1.17.7-fabric.jar"
 hash-format = "sha1"
-hash = "bb212486dd4ad4b70101746cec3d3586e0d5eea5"
+hash = "72cce91df9098d8ef0dae6a0db80d13581a44e94"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "1SfNOW9A"
+version = "Ixn4IaUD"
