--- a/versions/fabric/1.20.6/mods/immediatelyfast.pw.toml
+++ b/versions/fabric/1.20.6/mods/immediatelyfast.pw.toml
@@ -1,13 +1,13 @@
 name = "ImmediatelyFast"
-filename = "ImmediatelyFast-Fabric-1.2.15+1.20.6.jar"
+filename = "ImmediatelyFast-Fabric-1.2.16+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/aY5V6MjG/ImmediatelyFast-Fabric-1.2.15%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/LJDBWhHU/ImmediatelyFast-Fabric-1.2.16%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "e1af7c00e8416f7bc3562f28211c4ce71a297f31"
+hash = "2acb17bfc0c33e34fa9e4234c25af83f285e186e"
 
 [update]
 [update.modrinth]
 mod-id = "5ZwdcRci"
-version = "aY5V6MjG"
+version = "LJDBWhHU"
