--- a/archived/fabric/1.18.2/mods/world-host.pw.toml
+++ b/archived/fabric/1.18.2/mods/world-host.pw.toml
@@ -1,13 +1,13 @@
 name = "World Host"
-filename = "world-host-0.4.11+1.18.2-fabric.jar"
+filename = "world-host-0.4.12+1.18.2-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/Gj3GumJm/world-host-0.4.11%2B1.18.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/2AIZDfYo/versions/dxi6QAC0/world-host-0.4.12%2B1.18.2-fabric.jar"
 hash-format = "sha1"
-hash = "0165421b7f23657c795e0de7147ac7d38669655f"
+hash = "47a3be5ac94f44e85e93ca28d949b0cd111b9351"
 
 [update]
 [update.modrinth]
 mod-id = "2AIZDfYo"
-version = "Gj3GumJm"
+version = "dxi6QAC0"
