--- a/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.5+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.9+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/yopKMemL/FabricBetterGrass-1.0.5%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/aFLrUi8c/FabricBetterGrass-1.0.9%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "6a58fdbbe7061644650c14d74d899d1df5c325fa"
+hash = "18f8a7d133a6fb206fb977100532e5bb9dc24124"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "yopKMemL"
+version = "aFLrUi8c"
