--- a/versions/fabric/1.20.6/pack.toml
+++ b/versions/fabric/1.20.6/pack.toml
@@ -1,6 +1,6 @@
-name = "Additive"
-author = "SkywardMC"
-version = "1.27.0+1.20.6.fabric"
+name = "Additive Fork"
+author = "Uranite"
+version = "wontbother+1.20.6.fabric"
 pack-format = "packwiz:1.1.0"
 
 [index]
