--- a/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.9+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.10+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/aFLrUi8c/FabricBetterGrass-1.0.9%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/6M2Y6BRX/FabricBetterGrass-1.0.10%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "18f8a7d133a6fb206fb977100532e5bb9dc24124"
+hash = "d189d1e72855ca7cfdf5abd612665fd382b0f182"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "aFLrUi8c"
+version = "6M2Y6BRX"
