--- a/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.20.6/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.11+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.12+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/Zoq1VFGV/FabricBetterGrass-1.0.11%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/msKVPdy1/FabricBetterGrass-1.0.12%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "502d055966c9245cd3fd8b658d9907d3bc7ed625"
+hash = "96b3873f1884902f0b9105894e5005e79e3e5a6f"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "Zoq1VFGV"
+version = "msKVPdy1"
