--- a/versions/fabric/1.20.6/config/yosbr/config/moreculling.toml
+++ b/versions/fabric/1.20.6/config/yosbr/config/moreculling.toml
@@ -1,4 +1,4 @@
 version = 1
-itemFrameLODRange = 16
-itemFrame3FaceCullingRange = 2.0
-endGatewayCulling = true
+itemFrameLODRange = 64
+itemFrame3FaceCullingRange = 0.0
+includeMangroveRoots = true
