--- a/versions/fabric/1.20.6/mods/polytone.pw.toml
+++ b/versions/fabric/1.20.6/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.20.6-2.0.2-fabric.jar"
+filename = "polytone-1.20.6-1.19.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/l7ai8RMK/polytone-1.20.6-2.0.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/9kokA8Wm/polytone-1.20.6-1.19.1-fabric.jar"
 hash-format = "sha1"
-hash = "7e4a80a8d52f4ed08a9cfd2fab47e4131a63aa9b"
+hash = "2dd240796280a410c78a95fc346ef169438f3a45"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "l7ai8RMK"
+version = "9kokA8Wm"
