update mods and switch ryoamic to modrinth

--- a/versions/fabric/1.21/mods/dynamic-fps.pw.toml
+++ b/versions/fabric/1.21/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.4.3+minecraft-1.21.0-fabric.jar"
+filename = "dynamic-fps-3.5.0-beta.3+minecraft-1.21.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/jeq5Pk2P/dynamic-fps-3.4.3%2Bminecraft-1.21.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/GzuwoJDO/dynamic-fps-3.5.0-beta.3%2Bminecraft-1.21.0-fabric.jar"
 hash-format = "sha1"
-hash = "40fa85ae61c152a417aaee0a0d012ffb632c16e8"
+hash = "44fd27d63830fd24b1620cd70140f95852a74d9b"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "jeq5Pk2P"
+version = "GzuwoJDO"
