--- a/versions/fabric/1.21/mods/cubes-without-borders.pw.toml
+++ b/versions/fabric/1.21/mods/cubes-without-borders.pw.toml
@@ -1,13 +1,13 @@
 name = "Cubes Without Borders"
-filename = "cubes-without-borders-2.0.1+1.21.jar"
+filename = "cubes-without-borders-2.1.0+1.21.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/ETlrkaYF/versions/zG2rMbPK/cubes-without-borders-2.0.1%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/ETlrkaYF/versions/cU76xqvp/cubes-without-borders-2.1.0%2B1.21.jar"
 hash-format = "sha1"
-hash = "c944c4b677e86bda346f763deac0f57cd99af500"
+hash = "be868e3ee7b88dcb11f807003b94b893efa39a98"
 
 [update]
 [update.modrinth]
 mod-id = "ETlrkaYF"
-version = "zG2rMbPK"
+version = "cU76xqvp"
