--- a/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.15+1.21.jar"
+filename = "FabricBetterGrass-1.0.16+1.21.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/dxRuLfwr/FabricBetterGrass-1.0.15%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/qR8rYTKg/FabricBetterGrass-1.0.16%2B1.21.jar"
 hash-format = "sha1"
-hash = "a9ff5c1cd0dc244f5f53ac545dff26c892ebf249"
+hash = "b6cc9c3106a165c8832f0a5cc0dace10ed0052fa"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "dxRuLfwr"
+version = "qR8rYTKg"
