--- a/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.16+1.21.jar"
+filename = "FabricBetterGrass-1.0.17+1.21.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/qR8rYTKg/FabricBetterGrass-1.0.16%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/EfAF9obW/FabricBetterGrass-1.0.17%2B1.21.jar"
 hash-format = "sha1"
-hash = "b6cc9c3106a165c8832f0a5cc0dace10ed0052fa"
+hash = "c90827221ae1df728c11ad4bfb1fdaec5f946e88"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "qR8rYTKg"
+version = "EfAF9obW"
