--- a/versions/fabric/1.21/config/yosbr/config/moreculling.toml
+++ b/versions/fabric/1.21/config/yosbr/config/moreculling.toml
@@ -1,4 +1,7 @@
 version = 1
 itemFrameLODRange = 16
 itemFrame3FaceCullingRange = 2.0
+leavesCullingMode = "DEPTH"
+leavesCullingAmount = 3
+includeMangroveRoots = true
 endGatewayCulling = true
