--- a/versions/fabric/1.21/mods/modernfix.pw.toml
+++ b/versions/fabric/1.21/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.18.6+mc1.21.jar"
+filename = "modernfix-fabric-5.18.8+mc1.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/NUPJxyji/modernfix-fabric-5.18.6%2Bmc1.21.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/Ujn5wrXH/modernfix-fabric-5.18.8%2Bmc1.21.jar"
 hash-format = "sha1"
-hash = "277669d7a747d5e6e9a0cdb67e5934cb09f818b0"
+hash = "7fb5de0e73923e2f42a086c367bba633b5b1393c"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "NUPJxyji"
+version = "Ujn5wrXH"
