--- a/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
+++ b/versions/fabric/1.21/mods/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.18+1.21.jar"
+filename = "FabricBetterGrass-1.0.19+1.21.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/NJzEtxkC/FabricBetterGrass-1.0.18%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/k8AbCnz3/FabricBetterGrass-1.0.19%2B1.21.jar"
 hash-format = "sha1"
-hash = "10000f3d941856076e738bf2f7928350b69e15ff"
+hash = "55a37245fa55eba874e6c0447cc8d5658cb87901"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "NJzEtxkC"
+version = "k8AbCnz3"
