--- a/versions/fabric/1.21/pack.toml
+++ b/versions/fabric/1.21/pack.toml
@@ -1,6 +1,6 @@
 name = "Additive Fork"
 author = "Uranite"
-version = "wontbother+1.21.fabric"
+version = "1.0.0+1.21.fabric"
 pack-format = "packwiz:1.1.0"
 
 [index]
