--- a/versions/fabric/1.21/mods/polytone.pw.toml
+++ b/versions/fabric/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.1-fabric.jar"
+filename = "polytone-1.21-2.2.8-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/gF6RzV0i/polytone-1.21-2.2.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/u9t3V4Ih/polytone-1.21-2.2.8-fabric.jar"
 hash-format = "sha1"
-hash = "1f205aa8f8bb596b90327034975253600b80cc70"
+hash = "0c861ad64018bd3e19fc4c7c0cf0b03a67e029fb"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "gF6RzV0i"
+version = "u9t3V4Ih"
