--- a/versions/fabric/1.21/mods/polytone.pw.toml
+++ b/versions/fabric/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.12-fabric.jar"
+filename = "polytone-1.21-2.3.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/S7bbo8QV/polytone-1.21-2.2.12-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/10VaAuXa/polytone-1.21-2.3.0-fabric.jar"
 hash-format = "sha1"
-hash = "9e5fab41797ccdb71f5150d7f6729048162a280e"
+hash = "23f09c1b9ea0ee56d0194c1380c57624538ffcf5"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "S7bbo8QV"
+version = "10VaAuXa"
