--- a/versions/fabric/1.21/mods/cloth-config.pw.toml
+++ b/versions/fabric/1.21/mods/cloth-config.pw.toml
@@ -1,13 +1,13 @@
 name = "Cloth Config API"
-filename = "cloth-config-15.0.128-fabric.jar"
+filename = "cloth-config-15.0.127-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9s6osm5g/versions/gY9NB5Rj/cloth-config-15.0.128-fabric.jar"
+url = "https://cdn.modrinth.com/data/9s6osm5g/versions/Yc8omJNb/cloth-config-15.0.127-fabric.jar"
 hash-format = "sha1"
-hash = "10334d4833fda919fe82e6f864caed9bc018764c"
+hash = "d2cef696bbf70a07075b798e541e8c98c34ddd2d"
 
 [update]
 [update.modrinth]
 mod-id = "9s6osm5g"
-version = "gY9NB5Rj"
+version = "Yc8omJNb"
