--- a/versions/fabric/1.21/mods/fabric-api.pw.toml
+++ b/versions/fabric/1.21/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.102.0+1.21.jar"
+filename = "fabric-api-0.100.6+1.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/oGwyXeEI/fabric-api-0.102.0%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/Y0cpssyN/fabric-api-0.100.6%2B1.21.jar"
 hash-format = "sha1"
-hash = "43035a1c6f506285a9910bc8038d1b1b925f8dd1"
+hash = "dd92d95977c960affefc6c29e3ee946ce7b4723a"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "oGwyXeEI"
+version = "Y0cpssyN"
