--- a/versions/fabric/1.21/mods/modernfix.pw.toml
+++ b/versions/fabric/1.21/mods/modernfix.pw.toml
@@ -1,13 +1,13 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.19.1+mc1.21.jar"
+filename = "modernfix-fabric-5.18.7+mc1.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/i8GSONFm/modernfix-fabric-5.19.1%2Bmc1.21.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/omk9tj4N/modernfix-fabric-5.18.7%2Bmc1.21.jar"
 hash-format = "sha1"
-hash = "a0fd5799e698697232d75e7291276218198ea80a"
+hash = "6c3e8dd274b3f8af1d429736d526aeb109dd963f"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "i8GSONFm"
+version = "omk9tj4N"
