--- a/versions/fabric/1.21/mods/threadtweak.pw.toml
+++ b/versions/fabric/1.21/mods/threadtweak.pw.toml
@@ -1,13 +1,13 @@
 name = "ThreadTweak"
-filename = "threadtweak-fabric-0.1.4+mc1.21.jar"
+filename = "threadtweak-fabric-1.20.6-0.1.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/vSEH1ERy/versions/INOJp2Dt/threadtweak-fabric-0.1.4%2Bmc1.21.jar"
+url = "https://cdn.modrinth.com/data/vSEH1ERy/versions/BtMMYDAh/threadtweak-fabric-1.20.6-0.1.3.jar"
 hash-format = "sha1"
-hash = "03fe8b0216f373f1f61ab610f39dba2324158ee9"
+hash = "e9a1b75289a1be5efa56f8f6bdc4ffc6c793282e"
 
 [update]
 [update.modrinth]
 mod-id = "vSEH1ERy"
-version = "INOJp2Dt"
+version = "BtMMYDAh"
