update polytone and add back distant horizon and moreculling

--- a/versions/fabric/1.21.1/mods/polytone.pw.toml
+++ b/versions/fabric/1.21.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.3.12-fabric.jar"
+filename = "polytone-1.21-2.4.5-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/ly9vWxqA/polytone-1.21-2.3.12-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/JNtYoNkC/polytone-1.21-2.4.5-fabric.jar"
 hash-format = "sha1"
-hash = "88daaa8efe826f9580b65d288664190619581287"
+hash = "d413e2ac5660255dd6ac89b9ef29c1bab8f24683"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "ly9vWxqA"
+version = "JNtYoNkC"
